# mlx

./: Makefile  README.md  SPEC.md  dune-project  flake.nix  mlx_htmx.opam  mlx_test.opam
_build/: log
mlx/: dune  dune-project  lexer.mli  lexer.mll  main.ml  mlx.ml  mlx_parser.mly  parser.mly
mlx/lib/: dune
mlx/test/: dune
mlx_htmx/: dune  element.ml  mlx_htmx.ml  tag.ml
mlx_test/: basic_attr.mlx  dune  hello_world.mlx  open_and_close.mlx  open_and_close_with_spaces.mlx  print.mlx  run.t  self_closing.mlx  with_child_expression.mlx  with_children.mlx  with_nested_children.mlx  wrong_closing_tag.mlx
